--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
   
 website:
-  title: "MY WEB SITE"
+  title: "Zobaer Ahmed's World of Data: Research, Analysis, and Visual Insights"
   navbar:
     left:
       - href: index.qmd
@@ -13,10 +13,10 @@ website:
       - icon: twitter
         href: https://twitter.com/
       - icon: github
-        href: https://github.com/YOURUSERNAME/YOURREPO
+        href: https://github.com/zobaer09/portfolio
   page-footer:
     right: "Built with [Quarto](https://quarto.org/)"
-    left: "&copy; Copyright 2023, YOUR NAME"
+    left: "&copy; Copyright 2024, Zobaer Ahmed"
 
 format:
   html:
