--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,8 @@ website:
         href: index.qmd
       - text: "Tutorials"
         href: tutorials/
+      - text: "Publications"
+        href: publications/
   page-footer:
     right: "Built with [Quarto](https://quarto.org/)"
     left: "&copy; Copyright 2024, Zobaer Ahmed"
